# DllSearchPathPatcher

./: CMakeLists.txt  LICENSE  README.md  VersionLoader.cpp
.github/workflows/: release.yml
